Fix some layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,7 @@
 .page-leave-active {
   opacity: 0;
 }
+
+.columns.is-mobile {
+  flex-wrap: wrap;
+}
